<resources>
    <string name="app_name">Readme</string>
    <string name="frag">Fragment</string>
    <string name="title_profile">Profile</string>
    <string name="err_failed_profile_save">Failed saving profile!</string>
    <string name="success_save_profile">Saved profile!</string>
    <string name="err_public_image_upload">Failed upload image.</string>
    <string name="button_record">Record</string>
    <string name="button_recording">Recording</string>
    <string name="button_uploading">Uploading</string>
    <string name="ban_user">Ban user</string>
    <string name="add_new_manager">Add new manager</string>
    <string name="empty_list">Empty list</string>
    <string name="remove_word">Remove word</string>
    <string name="unban_user">Unban user</string>
    <string name="success_ban_user">Banned user</string>
    <string name="failure_ban_user">Error! User was not banned</string>
    <string name="success_unban_user">Unbanned user</string>
    <string name="failure_unban_user">Error! user was not unbanned</string>
    <string name="success_add_man">New manager was added</string>
    <string name="failure_add_man">Error! Failed to add manager</string>
    <string name="refresh">Refresh</string>
    <string name="failure_load_graph">Error! Failed to load graph</string>
    <string name="edit_profile">Edit profile</string>
    <string name="hot_words">Hot words</string>
    <string name="ban_warning">You are banning a user!\nPlease insert users\' phone number</string>
    <string name="phone_request">Please insert users\' phone number</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ban">Ban</string>
    <string name="unban">Unban</string>
    <string name="warning">Warning</string>
    <string name="clear_words_warning">removing all your hot words is irreversible, are you sure you want to proceed?</string>
    <string name="yes">Yes</string>
    <string name="add_new_word">Add new word</string>
    <string name="submit">Submit</string>
    <string name="invalid_word">Invalid_word</string>
    <string name="manger_page">Manger page</string>
    <string name="word_was_added">" was added"</string>
    <string name="active_users">AU</string>
    <string name="messages_per_round">MPR</string>
    <string name="title_settings">Settings</string>
    <string name="title_manager">Manager</string>
    <string name="title_hot_words">Hot Words View</string>
    <string name="unknown_user">Unknown user</string>
    <string name="err_first_name_empty">First name can\'t be empty</string>
    <string name="err_last_name_empty">Last name can\'t be empty</string>
    <string name="ok_user_registered">User registered!</string>
    <string name="err_user_registration">Something went wrong with user registration.</string>
    <string name="err_banned">You are banned from the system.</string>
    <string name="title_hot_word_alerts">Hot words alerts</string>
    <string name="hot_words_description">Channel for alerting on hot word messages.</string>
</resources>